# cgsi

./: pyproject.toml
cgsi/: __main__.py  cgsi_1.glade  cgsi_1.glade~  clipping.py  control.py  obj_descriptor.py  shapes.py  transformations.py  window.py
