[tool.poetry]
name = "cgsi"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>", "Thales A. Zirbel Hubner <thaleszh@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
pygobject = "^3.32"
pycairo = "^1.18"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jedi = "^0.13.3"
autopep8 = "^1.4"

[tool.poetry.scripts]
cgsi = "cgsi.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
